err/appy.pod.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appy'...
Listing './lib/python3.5/site-packages/appy/pod'...
Compiling './lib/python3.5/site-packages/appy/pod/actions.py'...
***   File "./lib/python3.5/site-packages/appy/pod/actions.py", line 92
    except PodError, pe:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/appy/pod/buffers.py'...
***   File "./lib/python3.5/site-packages/appy/pod/buffers.py", line 164
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/appy/pod/converter.py'...
***   File "./lib/python3.5/site-packages/appy/pod/converter.py", line 82
    except OSError, oe:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/appy/pod/renderer.py'...
***   File "./lib/python3.5/site-packages/appy/pod/renderer.py", line 212
    except OSError, oe:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/appy/pod/test'...
Listing './lib/python3.5/site-packages/appy/pod/test/DummyPloneProduct'...
Listing './lib/python3.5/site-packages/appy/pod/test/DummyPloneProduct/Extensions'...
Compiling './lib/python3.5/site-packages/appy/pod/test/DummyPloneProduct/__init__.py'...
***   File "./lib/python3.5/site-packages/appy/pod/test/DummyPloneProduct/__init__.py", line 97
    print 'Customization policy for DummyPloneProduct installed'
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/appy/pod/test/DummyPloneProduct/model'...
Listing './lib/python3.5/site-packages/appy/pod/test/DummyPloneProduct/skins'...
Listing './lib/python3.5/site-packages/appy/pod/test/DummyPloneProduct/skins/DummyPloneProduct'...
Compiling './lib/python3.5/site-packages/appy/pod/test/Tester.py'...
***   File "./lib/python3.5/site-packages/appy/pod/test/Tester.py", line 99
    exec 'import %s' % contextPkg
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/appy/pod/test/contexts'...
Listing './lib/python3.5/site-packages/appy/pod/test/results'...
Listing './lib/python3.5/site-packages/appy/pod/test/templates'...
Listing './lib/python3.5/site-packages/appy/shared'...
Compiling './lib/python3.5/site-packages/appy/shared/rtf.py'...
***   File "./lib/python3.5/site-packages/appy/shared/rtf.py", line 139
    except TypeError, te:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/appy/shared/test.py'...
***   File "./lib/python3.5/site-packages/appy/shared/test.py", line 142
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/appy.pod-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/appy.shared-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
